Fix "Add-Exports" case for the setAccessibleNonPublicMemberNonExportedPackage test (v2)