@@ -374,7 +374,8 @@ public class IllegalAccessTest {
         Attributes attrs = man.getMainAttributes();
         attrs.put(Attributes.Name.MANIFEST_VERSION, "1.0");
         attrs.put(Attributes.Name.MAIN_CLASS, "TryAccess");
-        attrs.put(new Attributes.Name("Add-Exports"), "java.base/sun.security.x509");
+        attrs.put(new Attributes.Name("Add-Exports"),
+                  "java.base/sun.security.x509 java.base/sun.nio.ch");
         Path jarfile = Paths.get("x.jar");
         Path classes = Paths.get(TEST_CLASSES);
         JarUtils.createJarFile(jarfile, man, classes, Paths.get("TryAccess.class"));
@@ -384,10 +385,9 @@ public class IllegalAccessTest {
         run(jarfile, "reflectPublicMemberNonExportedPackage", successNoWarning(),
                 "--illegal-access=permit");
 
-        // should fail as --add-exports does not open package
+        // should fail as Add-Exports does not open package
         run(jarfile, "setAccessibleNonPublicMemberNonExportedPackage",
-            fail("InaccessibleObjectException"),
-            "--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED");
+            fail("InaccessibleObjectException"));
     }
 
     /**
